--- a/vagrantfile
+++ b/vagrantfile
@@ -1,7 +1,7 @@
 Vagrant.configure("2") do |config|
   config.vm.define  "kmaster" do |node|
     node.vm.box = "ubuntu/xenial64"
-    node.vm.hostname  = "kmaster"
+    node.vm.hostname  = "kmaster.local"
     node.vm.provider "virtualbox" do |v|
       v.name = "kmaster"
       v.memory = 1024
@@ -20,7 +20,7 @@ Vagrant.configure("2") do |config|
 
   config.vm.define "knode-1" do |node|
     node.vm.box = "ubuntu/xenial64"
-    node.vm.hostname  = "knode-1"
+    node.vm.hostname  = "knode-1.local"
     node.vm.provider "virtualbox" do |v|
       v.name = "knode-1"
           v.memory = 1024
